Fixed dropdown alignment

--- a/css/pages/stats.css
+++ b/css/pages/stats.css
@@ -31,7 +31,7 @@ tr[data-tr-timestamp], tr[data-tr-mark] {
   font-size: 70%;
 }
 
-#view-group-detail .dropdown.text-full-width > .text {
+.dropdown.text-full-width > .text {
   width: calc(100% - 2.5em);
 }
 
